syntax = "proto3";

package api;
option go_package = "api/auth";

service AuthApi{
  rpc Register (RegisterRequest) returns (RegisterResponse){}
  rpc ConfirmCode (ConfirmCodeRequest) returns (ConfirmCodeResponse){}
  rpc Login (LoginRequest) returns (LoginResponse){}
}

message User {
  string tg_name = 1;
  string password = 2;
}

message RegisterRequest {
  User user = 1;
}
message RegisterResponse {
}

message ConfirmCodeRequest {
  string tg_name = 1;
  int64 code = 2;
}
message ConfirmCodeResponse {
  string user_id = 1;
}

message LoginRequest {
  User user = 1;
}
message LoginResponse {
  string jwt = 1;
}